project(emulator CXX C ASM)
cmake_minimum_required(VERSION 2.8)
#aux_source_directory(. SRC_LIST)

find_package (Threads)

set(CXX clang++)
set(CC  clang)
set(EMU_PLATF_TRIPLET "x86_64-unknown-linux-gnu")
set(EMU_PLATF_OS "unix") # unix ose or win32
set(EMU_SMP "smp") # smp or plain
set(HIPE_ARCH amd64)

set(emulator_PLATF_opt_SMP  ${CMAKE_SOURCE_DIR}/${EMU_PLATF_TRIPLET}/opt/${EMU_SMP})
set(emulator_PLATF          ${CMAKE_SOURCE_DIR}/${EMU_PLATF_TRIPLET})

include_directories( ${CMAKE_SOURCE_DIR}
    ${CMAKE_SOURCE_DIR}/bloatware/src/beam
    ${CMAKE_SOURCE_DIR}/bloatware/legacy/beam
    ${CMAKE_SOURCE_DIR}/bloatware/include
    ${CMAKE_SOURCE_DIR}/bloatware/src/ethread
    ${CMAKE_SOURCE_DIR}/hipe
    ${CMAKE_SOURCE_DIR}/pcre
    ${CMAKE_SOURCE_DIR}/bloatware/legacy/drivers/common
    ${CMAKE_SOURCE_DIR}/bloatware/legacy/sys/common
    ${CMAKE_SOURCE_DIR}/bloatware/legacy/sys/${EMU_PLATF_OS}
    ${CMAKE_SOURCE_DIR}/../include
    ${CMAKE_SOURCE_DIR}/../include/internal
    ${CMAKE_SOURCE_DIR}/../include/${EMU_PLATF_TRIPLET}
    ${CMAKE_SOURCE_DIR}/../${EMU_PLATF_TRIPLET}
    ${CMAKE_SOURCE_DIR}/${EMU_PLATF_TRIPLET}
    ${CMAKE_SOURCE_DIR}/${EMU_PLATF_TRIPLET}/opt/${EMU_SMP}
    )

add_definitions(-DHAVE_CONFIG_H
    -DERTS_SMP
    -DUSE_THREADS -DETHR_PTHREADS
    -D_GNU_SOURCE=1
    -DERLANG_INTEGRATION
    -DLIBSCTP=libsctp.so.1
    -O0
    )
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS}
    -std=c++11
    )
set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS}
    -std=c99
    )
set(SRC_BLOATWARE
    bloatware/include/bw_types.h
    )
set(SRC_GENERATED
    # generated by otp build
    #======================================================
    ${emulator_PLATF_opt_SMP}/erl_alloc_types.h
    bloatware/gen/beam_opcodes.cpp      bloatware/gen/beam_opcodes.h
    bloatware/gen/driver_tab.cpp
    ${emulator_PLATF}/erl_atom_table.c      ${emulator_PLATF}/erl_atom_table.h
    bloatware/gen/erl_bif_wrap.cpp
    bloatware/gen/preload.cpp           bloatware/legacy/beam/preload.h
    #${emulator_PLATF}/erl_bif_table.cpp
    bloatware/gen/erl_bif_table.cpp
    )
set(SRC_LIST
    bloatware/legacy/beam/atom.cpp               bloatware/legacy/beam/atom.h
    bloatware/legacy/beam/beam_bif_load.cpp
    bloatware/legacy/beam/beam_bp.cpp            bloatware/legacy/beam/beam_bp.h
    bloatware/legacy/beam/beam_catches.cpp       bloatware/legacy/beam/beam_catches.h
    bloatware/legacy/beam/beam_debug.cpp
    bloatware/legacy/beam/beam_emu.cpp
    bloatware/legacy/beam/beam_load.cpp          bloatware/legacy/beam/beam_load.h
    bloatware/legacy/beam/beam_ranges.cpp
    bloatware/legacy/beam/benchmark.cpp          bloatware/legacy/beam/benchmark.h
    bloatware/legacy/beam/bif.cpp                bloatware/legacy/beam/bif.h
    bloatware/legacy/beam/big.cpp                bloatware/legacy/beam/big.h
    bloatware/legacy/beam/binary.cpp
    bloatware/legacy/beam/break.cpp
    bloatware/legacy/beam/code_ix.cpp            bloatware/legacy/beam/code_ix.h
    bloatware/legacy/beam/copy.cpp
    bloatware/legacy/beam/dist.cpp               bloatware/legacy/beam/dist.h
    bloatware/legacy/beam/erl_afit_alloc.cpp     bloatware/legacy/beam/erl_afit_alloc.h

    bloatware/legacy/beam/erl_alloc.cpp          bloatware/legacy/beam/erl_alloc.h
    bloatware/src/beam/bw_alloc.cpp bloatware/src/beam/bw_alloc.h

    bloatware/legacy/beam/erl_alloc_util.cpp     bloatware/legacy/beam/erl_alloc_util.h
    bloatware/legacy/beam/erl_ao_firstfit_alloc.cpp   bloatware/legacy/beam/erl_ao_firstfit_alloc.h
    bloatware/legacy/beam/erl_arith.cpp
    bloatware/legacy/beam/erl_async.cpp          bloatware/legacy/beam/erl_async.h
    bloatware/legacy/beam/erl_bestfit_alloc.cpp  bloatware/legacy/beam/erl_bestfit_alloc.h
    bloatware/legacy/beam/erl_bif_binary.cpp
    bloatware/legacy/beam/erl_bif_chksum.cpp
    bloatware/legacy/beam/erl_bif_ddll.cpp
    bloatware/legacy/beam/erl_bif_info.cpp
    bloatware/legacy/beam/erl_bif_op.cpp
    bloatware/legacy/beam/erl_bif_guard.cpp
    bloatware/legacy/beam/erl_bif_lists.cpp
    bloatware/legacy/beam/erl_bif_os.cpp
    bloatware/legacy/beam/erl_bif_port.cpp
    bloatware/legacy/beam/erl_bif_re.cpp
    bloatware/legacy/beam/erl_bif_timer.cpp      bloatware/legacy/beam/erl_bif_timer.h
    bloatware/legacy/beam/erl_bif_trace.cpp
    bloatware/legacy/beam/erl_bits.cpp           bloatware/legacy/beam/erl_bits.h
      bloatware/legacy/beam/erl_binary.h

    bloatware/legacy/beam/erl_cpu_topology.cpp   bloatware/legacy/beam/erl_cpu_topology.h
    bloatware/src/beam/bw_cpu_topology.cpp bloatware/src/beam/bw_cpu_topology.h

    bloatware/legacy/beam/erl_db.cpp             bloatware/legacy/beam/erl_db.h
    bloatware/legacy/beam/erl_db_hash.cpp        bloatware/legacy/beam/erl_db_hash.h
    bloatware/legacy/beam/erl_db_tree.cpp        bloatware/legacy/beam/erl_db_tree.h
    bloatware/legacy/beam/erl_db_util.cpp        bloatware/legacy/beam/erl_db_util.h
      bloatware/legacy/beam/erl_driver.h
    bloatware/legacy/beam/erl_drv_thread.cpp
    bloatware/legacy/beam/erl_fun.cpp            bloatware/legacy/beam/erl_fun.h
    bloatware/legacy/beam/erl_gc.cpp             bloatware/legacy/beam/erl_gc.h
    bloatware/legacy/beam/erl_goodfit_alloc.cpp  bloatware/legacy/beam/erl_goodfit_alloc.h

    bloatware/src/beam/bw_beam_init.cpp bloatware/src/beam/bw_beam_init.h
    bloatware/legacy/beam/erl_init.cpp

    bloatware/legacy/beam/erl_instrument.cpp     bloatware/legacy/beam/erl_instrument.h
    bloatware/legacy/beam/erl_map.cpp            bloatware/legacy/beam/erl_map.h
    bloatware/legacy/beam/erl_math.cpp
    bloatware/legacy/beam/erl_md5.cpp
    bloatware/legacy/beam/erl_message.cpp        bloatware/legacy/beam/erl_message.h
    bloatware/legacy/beam/erl_monitors.cpp       bloatware/legacy/beam/erl_monitors.h
    bloatware/legacy/beam/erl_mtrace.cpp         bloatware/legacy/beam/erl_mtrace.h
    bloatware/legacy/beam/erl_nif.cpp            bloatware/legacy/beam/erl_nif.h
    bloatware/legacy/beam/erl_node_tables.cpp    bloatware/legacy/beam/erl_node_tables.h

    bloatware/src/beam/bw_port.h
      bloatware/legacy/beam/erl_port.h

    bloatware/legacy/beam/erl_port_task.cpp      bloatware/legacy/beam/erl_port_task.h
    bloatware/legacy/beam/erl_posix_str.cpp
    bloatware/legacy/beam/erl_printf_term.cpp    bloatware/legacy/beam/erl_printf_term.h

    bloatware/src/beam/bw_process.cpp            bloatware/src/beam/bw_process.h
    bloatware/legacy/beam/erl_process.cpp        bloatware/legacy/beam/erl_process.h

    bloatware/legacy/beam/erl_process_dict.cpp   bloatware/legacy/beam/erl_process_dict.h
    bloatware/legacy/beam/erl_process_dump.cpp
    bloatware/legacy/beam/erl_process_lock.cpp   bloatware/legacy/beam/erl_process_lock.h
    bloatware/legacy/beam/erl_ptab.cpp           bloatware/legacy/beam/erl_ptab.h
    bloatware/legacy/beam/erl_sched_spec_pre_alloc.cpp bloatware/legacy/beam/erl_sched_spec_pre_alloc.h
      bloatware/legacy/beam/erl_smp.h
    bloatware/legacy/beam/erl_term.cpp           bloatware/legacy/beam/erl_term.h
      bloatware/legacy/beam/erl_threads.h
    bloatware/legacy/beam/erl_thr_progress.cpp   bloatware/legacy/beam/erl_thr_progress.h
    bloatware/legacy/beam/erl_thr_queue.cpp      bloatware/legacy/beam/erl_thr_queue.h
      bloatware/legacy/beam/erl_thr_queue.h
      bloatware/legacy/beam/erl_time.h
    bloatware/legacy/beam/erl_time_sup.cpp
    bloatware/legacy/beam/erl_trace.cpp          bloatware/legacy/beam/erl_trace.h
    bloatware/legacy/beam/erl_unicode.cpp        bloatware/legacy/beam/erl_unicode.h
    bloatware/src/beam/bw_erl_vm.cpp  bloatware/src/beam/bw_erl_vm.h
    bloatware/legacy/beam/erl_zlib.cpp           bloatware/legacy/beam/erl_zlib.h
      bloatware/legacy/beam/erl_utils.h
    bloatware/legacy/beam/export.cpp             bloatware/legacy/beam/export.h
    bloatware/legacy/beam/external.cpp           bloatware/legacy/beam/external.h
      bloatware/legacy/beam/global.h
    bloatware/legacy/beam/hash.cpp               bloatware/legacy/beam/hash.h
    bloatware/legacy/beam/index.cpp              bloatware/legacy/beam/index.h
    bloatware/legacy/beam/io.cpp
    bloatware/legacy/beam/module.cpp             bloatware/legacy/beam/module.h
    bloatware/legacy/beam/packet_parser.cpp      bloatware/legacy/beam/packet_parser.h
    bloatware/legacy/beam/register.cpp           bloatware/legacy/beam/register.h
    bloatware/legacy/beam/safe_hash.cpp          bloatware/legacy/beam/safe_hash.h
      bloatware/legacy/beam/sys.h
    bloatware/legacy/beam/time.cpp
    bloatware/legacy/beam/utils.cpp

    #======================================================
    bloatware/legacy/drivers/common/efile_drv.cpp
        bloatware/legacy/drivers/common/erl_efile.h
    bloatware/legacy/drivers/common/gzio.cpp     bloatware/legacy/drivers/common/gzio.h
    bloatware/legacy/drivers/common/inet_drv.cpp
    bloatware/legacy/drivers/common/ram_file_drv.cpp
    bloatware/legacy/drivers/common/zlib_drv.cpp

    bloatware/legacy/drivers/unix/ttsl_drv.cpp
    bloatware/legacy/drivers/unix/unix_efile.cpp

    #======================================================
    #hipe/hipe_${HIPE_ARCH}.cpp
    #hipe/hipe_${HIPE_ARCH}_glue.S
    #${emulator_PLATF_opt_SMP}/hipe_${HIPE_ARCH}_bifs.S
    #${emulator_PLATF_opt_SMP}/hipe_${HIPE_ARCH}_asm.h
    #${emulator_PLATF_opt_SMP}/hipe_literals.h
    #${emulator_PLATF_opt_SMP}/hipe_x86_asm.h

    #hipe/hipe_bif0.cpp            hipe/hipe_bif0.h
    #hipe/hipe_bif1.cpp            hipe/hipe_bif1.h
    #hipe/hipe_bif2.cpp
    #hipe/hipe_bif64.cpp           hipe/hipe_bif64.h
    #hipe/hipe_debug.cpp           hipe/hipe_debug.h
    #hipe/hipe_gc.cpp              hipe/hipe_gc.h
    #hipe/hipe_mode_switch.cpp     hipe/hipe_mode_switch.h
    #hipe/hipe_native_bif.cpp      hipe/hipe_native_bif.h
    #  hipe/hipe_process.h
    #hipe/hipe_x86_signal.cpp
    #hipe/hipe_x86_stack.cpp
    #hipe/hipe_stack.cpp           hipe/hipe_stack.h

    #======================================================
    #pcre/dftables.c
    pcre/local_config.h
    pcre/pcre.h
    pcre/pcre_byte_order.c
    pcre/pcre_chartables.c
    pcre/pcre_compile.c
    pcre/pcre_config.c
    pcre/pcre_dfa_exec.c
    pcre/pcre_exec.c
    pcre/pcre_fullinfo.c
    pcre/pcre_get.c
    pcre/pcre_globals.c
    pcre/pcre_internal.h
    pcre/pcre_jit_compile.c
    #pcre/pcre_latin_1_table.c
    pcre/pcre_maketables.c
    pcre/pcre_newline.c
    pcre/pcre_ord2utf8.c
    pcre/pcre_refcount.c
    pcre/pcre_string_utils.c
    pcre/pcre_study.c
    pcre/pcre_tables.c
    pcre/pcre_ucd.c
    pcre/pcre_valid_utf8.c
    pcre/pcre_version.c
    pcre/pcre_xclass.c
    pcre/ucp.h

    #======================================================
    bloatware/legacy/sys/common/erl_check_io.kp.cpp
    bloatware/legacy/sys/common/erl_check_io.nkp.cpp       bloatware/legacy/sys/common/erl_check_io.h
    bloatware/legacy/sys/common/erl_mmap.cpp               bloatware/legacy/sys/common/erl_mmap.h
    bloatware/legacy/sys/common/erl_mtrace_sys_wrap.cpp
    bloatware/legacy/sys/common/erl_mseg.cpp               bloatware/legacy/sys/common/erl_mseg.h
    bloatware/legacy/sys/common/erl_poll.kp.cpp
    bloatware/legacy/sys/common/erl_poll.nkp.cpp           bloatware/legacy/sys/common/erl_poll.h
    bloatware/legacy/sys/common/erl_sys_common_misc.cpp

    #bloatware/legacy/sys/${EMU_PLATF_OS}/erl_main.cpp
    bloatware/src/${EMU_PLATF_OS}/bw_main.cpp
      bloatware/legacy/sys/${EMU_PLATF_OS}/erl_unix_sys.h
    bloatware/legacy/sys/${EMU_PLATF_OS}/erl_unix_sys_ddll.cpp

    bloatware/legacy/sys/${EMU_PLATF_OS}/sys.cpp
    bloatware/src/unix/bw_sys.cpp bloatware/include/bw_sys.h

    bloatware/legacy/sys/${EMU_PLATF_OS}/sys_float.cpp
    bloatware/legacy/sys/${EMU_PLATF_OS}/sys_time.cpp

    #======================================================
    zlib/adler32.c
    zlib/compress.c
    zlib/crc32.c            zlib/crc32.h
    zlib/deflate.c          zlib/deflate.h
        zlib/gzguts.h
    zlib/inffast.c          zlib/inffast.h
        zlib/inffixed.h
    zlib/inflate.c          zlib/inflate.h
    zlib/inftrees.c         zlib/inftrees.h
    zlib/trees.c            zlib/trees.h
    zlib/uncompr.c
    zlib/zconf.h
    zlib/zlib.h
    zlib/zutil.c            zlib/zutil.h

    #======================================================
    ../${EMU_PLATF_TRIPLET}/config.h

    ../lib_src/common/erl_misc_utils.cpp ../include/internal/erl_misc_utils.h
    bloatware/src/beam/bw_misc_utils.cpp bloatware/src/beam/bw_misc_utils.h

    ../lib_src/common/erl_printf.cpp
    ../lib_src/common/erl_printf_format.cpp
    ../lib_src/common/ethr_atomics.cpp
    ../lib_src/common/ethr_mutex.cpp
    ../lib_src/common/ethr_aux.cpp
    ../lib_src/pthread/ethread.cpp    ../include/internal/ethread.h
    ../lib_src/pthread/ethr_event.cpp
    ../include/internal/ethread_inline.h
    )

add_executable(${PROJECT_NAME} ${SRC_LIST} ${SRC_GENERATED} ${SRC_BLOATWARE})
#SET_SOURCE_FILES_PROPERTIES(${SRC_GENERATED} PROPERTIES LANGUAGE CXX )

target_link_libraries(${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT}
                      m dl curses pthread)
